@@ -1,7 +1,11 @@
 caputils-0.7.3
 --------------
 
-	* change logmsg writes tag centered.
+	* add: stream_addr_str() to set a local filename easily.
+	* add: stream_addr_type() to get type in host order
+	* change: splitting filter structs so the packed and unpacked are
+	          different (reordered, removed cruft etc)
+	* change: logmsg writes tag centered.
 	* add: {,v}logmsg from libmarc is more suitable here.
 	* change: const correctness, fixing warnings.
 	* change: using size_t where appropriate (e.g. fread)
